--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "essentials-lite",
-    "description": "Lite version of the essentials app",
+    "name": "Essentials-lite",
+    "description": "Essentials-lite helps you get the essentials you need to jump right into your favorite new activity!",
     "slug": "essentials-lite",
     "privacy": "unlisted",
     "sdkVersion": "23.0.0",
@@ -15,7 +15,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false,
+      "bundleIdentifier": "com.soulsoftware.essentialslite"
     }
   }
 }
