--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "native-base": "^2.3.3",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz",
+    "react-native-meteor": "^1.2.0",
     "react-navigation": "^1.0.0-beta.19"
   },
   "name": "essentials-lite",
