--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "primaryColor": "#cccccc",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/SplashScreenRed2.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
